[tool.poetry]
name = "ludus"
version = "0.1.0"
description = "Bot para o telegram com diversos jogos de cartas e tabuleiro."
authors = ["Edson Cristovam <pg2006pe@hotmail.com>"]
license = "GNU V3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.1 <3.11.0"
pymongo = "4.3.3"
python-decouple = "3.8"
python-telegram-bot = {version = "21.10", extras = ["job-queue"]}


[tool.poetry.group.dev.dependencies]
autopep8 = "2.3.1"
pytest = "8.3.5"
flake8 = "7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
